namespaces/live.cloud-platform.service.justice.gov.uk/laa-data-claims-reporting-service-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-data-claims-reporting-service-uat"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-bulkclaim-reporting"
    cloud-platform.justice.gov.uk/application: "Generate Reports from LAA Claims Data"
    cloud-platform.justice.gov.uk/owner: "GLAD (Get Legal Aid Data): gpfd@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-data-claims-reporting-service"
    cloud-platform.justice.gov.uk/team-name: "payforlegalaid"
    cloud-platform.justice.gov.uk/review-after: ""
